# commit_zen_testing

./: CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: pre-commit.yml
commit_zen_testing/: __main__.py
